[gd_scene load_steps=26 format=2]

[ext_resource path="res://Level/Frog/Sprites/BG.PNG" type="Texture" id=1]
[ext_resource path="res://Level/Frog/Sprites/NoWebbedFeet.PNG" type="Texture" id=2]
[ext_resource path="res://Level/Frog/Sprites/Reeds.PNG" type="Texture" id=3]
[ext_resource path="res://Level/Frog/Sprites/EyeBase.PNG" type="Texture" id=4]
[ext_resource path="res://Level/Frog/Sprites/Flame1.PNG" type="Texture" id=5]
[ext_resource path="res://Level/Frog/Sprites/WebbedFeet.PNG" type="Texture" id=6]
[ext_resource path="res://Level/Frog/Sprites/LilyPads.PNG" type="Texture" id=7]
[ext_resource path="res://Level/Frog/Sprites/Body.PNG" type="Texture" id=8]
[ext_resource path="res://Level/Frog/Sprites/EyePupil3.PNG" type="Texture" id=9]
[ext_resource path="res://Level/Frog/Sprites/EyePupil1.PNG" type="Texture" id=10]
[ext_resource path="res://Level/Frog/Sprites/Tummy.PNG" type="Texture" id=11]
[ext_resource path="res://Level/Frog/Sprites/EyePupil2.PNG" type="Texture" id=12]
[ext_resource path="res://Level/Frog/Sprites/RainParticle.png" type="Texture" id=13]
[ext_resource path="res://Level/Frog/Sprites/Flame2.PNG" type="Texture" id=14]
[ext_resource path="res://Level/Frog/Sprites/Throat.PNG" type="Texture" id=15]
[ext_resource path="res://Level/Frog/FrogIdentifiers.gd" type="Script" id=16]
[ext_resource path="res://Level/Frog/Throat.gd" type="Script" id=17]
[ext_resource path="res://Level/Frog/Ribbit.mp3" type="AudioStream" id=18]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 7 ), ExtResource( 3 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ ExtResource( 2 ), ExtResource( 6 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="SpriteFrames" id=3]
animations = [ {
"frames": [ ExtResource( 10 ), ExtResource( 12 ), ExtResource( 9 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="Shader" id=4]
code = "shader_type canvas_item;

void vertex(){
	VERTEX.x += sin(60.0 * TIME) * 10.0 * (UV.y - 0.5);
}

uniform vec4 white : hint_color = vec4(1.0, 1.0, 1.0, 0.6);
uniform vec4 red : hint_color = vec4(1.0, 0.0, 0.0, 1.0);
uniform vec4 yellow : hint_color = vec4(1.0, 0.0, 1.0, 1.0);
uniform vec4 blue : hint_color = vec4(0.255, 0.412, 0.882, 1.0);

// The chosen color is selected using this uniform int.
// Set the value to change the color.
// 0 - White
// 1 - Red
// 2 - Magenta
// 3 - Royal Blue
uniform int colour_index : hint_range(0, 3, 1) = 0;

void fragment()
{
	COLOR = texture(TEXTURE, UV);
	
	if(COLOR.a != 0.0)
		if(colour_index == 0)
			COLOR = vec4(white);
		else if(colour_index == 1)
			COLOR = vec4(red);
		else if(colour_index == 2)
			COLOR = vec4(yellow);
		else
			COLOR = vec4(blue);
}"

[sub_resource type="ShaderMaterial" id=5]
shader = SubResource( 4 )
shader_param/white = Color( 1, 1, 1, 0.6 )
shader_param/red = Color( 0.952941, 0.266667, 0.0823529, 0.737255 )
shader_param/yellow = Color( 0.933333, 0.835294, 0.180392, 0.752941 )
shader_param/blue = Color( 0.231373, 0.662745, 0.898039, 0.705882 )
shader_param/colour_index = 2

[sub_resource type="Shader" id=6]
code = "shader_type canvas_item;

void vertex(){
	VERTEX.x += sin(60.0 * TIME) * 10.0 * (UV.y - 0.6);
}

uniform vec4 white : hint_color = vec4(1.0, 1.0, 1.0, 0.8);
void fragment()
{
	COLOR = texture(TEXTURE, UV);
	
	if(COLOR.a != 0.0)
		COLOR = vec4(white);
}"

[sub_resource type="ShaderMaterial" id=7]
shader = SubResource( 6 )
shader_param/white = Color( 1, 1, 1, 0.8 )

[node name="Frog" type="Node2D"]

[node name="BG" type="Sprite" parent="."]
position = Vector2( 640, 360 )
texture = ExtResource( 1 )
__meta__ = {
"_edit_lock_": true
}

[node name="Identifiers" type="Node2D" parent="."]
position = Vector2( 640, 360 )
script = ExtResource( 16 )

[node name="Environment" type="AnimatedSprite" parent="Identifiers"]
frames = SubResource( 1 )

[node name="Tummy" type="Sprite" parent="Identifiers"]
texture = ExtResource( 11 )

[node name="Throat" type="Sprite" parent="Identifiers"]
texture = ExtResource( 15 )
script = ExtResource( 17 )

[node name="Tween1" type="Tween" parent="Identifiers/Throat"]

[node name="Tween2" type="Tween" parent="Identifiers/Throat"]

[node name="RibbitDelay" type="Timer" parent="Identifiers/Throat"]
wait_time = 2.0

[node name="Ribbit" type="AudioStreamPlayer" parent="Identifiers/Throat"]
stream = ExtResource( 18 )
bus = "SFX"

[node name="Webs" type="AnimatedSprite" parent="Identifiers"]
frames = SubResource( 2 )

[node name="Body" type="Sprite" parent="Identifiers"]
texture = ExtResource( 8 )

[node name="EyeBase" type="Sprite" parent="Identifiers"]
texture = ExtResource( 4 )

[node name="EyePupil" type="AnimatedSprite" parent="Identifiers"]
frames = SubResource( 3 )

[node name="Fire" type="Sprite" parent="Identifiers"]
material = SubResource( 5 )
texture = ExtResource( 5 )

[node name="FireCenter" type="Sprite" parent="Identifiers/Fire"]
material = SubResource( 7 )
texture = ExtResource( 14 )

[node name="Timer" type="Timer" parent="."]

[node name="Rain" type="CPUParticles2D" parent="."]
position = Vector2( 768, -136 )
amount = 60
lifetime = 0.3
texture = ExtResource( 13 )
emission_shape = 2
emission_rect_extents = Vector2( 800, 1 )
direction = Vector2( -15, 100 )
spread = 0.0
gravity = Vector2( 0, 0 )
initial_velocity = 3000.0
angle = -5.0
color = Color( 0.803922, 0.941176, 0.945098, 0.4 )

[connection signal="tween_all_completed" from="Identifiers/Throat/Tween1" to="Identifiers/Throat" method="_on_Tween1_tween_all_completed"]
[connection signal="timeout" from="Identifiers/Throat/RibbitDelay" to="Identifiers/Throat" method="_on_RibbetDelay_timeout"]
